--- a/resources/mobile.init.styles.less
+++ b/resources/mobile.init.styles.less
@@ -3,6 +3,10 @@
 .client-js {
 	.collapsible-block:not( .collapsible-block-js ) {
 		display: none;
+
+		&.open-block {
+			display: block;
+		}
 	}
 }
 
@@ -51,3 +55,13 @@ ul.footer-places li {
 	content: '' !important;
 }
 // END FOOTER RULES
+
+@media all and ( min-width: @width-breakpoint-tablet ) {
+	.client-js {
+		// Avoid flash of unstyled content for tablet users while JavaScript is loading
+		// onclick attribute is removed by the toggling code.
+		[ onclick ] + .collapsible-block {
+			display: block;
+		}
+	}
+}
